fixing overlap issue

--- a/styles/partials/layout/slices/dashCTA.scss
+++ b/styles/partials/layout/slices/dashCTA.scss
@@ -28,7 +28,7 @@
     @include tablet {
       width: 100%;
       margin: auto;
-      margin-bottom: 170px;
+      margin-bottom: 130px;
     }
     .box-shadows {
       box-shadow: 4px 4px 14px rgba(#ebf0f8, 0.7);
